docs/apache-airflow-providers-sftp/2.4.0/_sources/_api/airflow/providers/sftp/sensors/sftp/index.rst.txt
:py:mod:`airflow.providers.sftp.sensors.sftp`
=============================================

.. py:module:: airflow.providers.sftp.sensors.sftp

.. autoapi-nested-parse::

   This module contains SFTP sensor.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.sftp.sensors.sftp.SFTPSensor




.. py:class:: SFTPSensor(*, path: str, sftp_conn_id: str = 'sftp_default', **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`

   Waits for a file or directory to be present on SFTP.

   :param path: Remote file or directory path
   :type path: str
   :param sftp_conn_id: The connection to run the sensor against
   :type sftp_conn_id: str

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['path']

      

   .. py:method:: poke(self, context: airflow.utils.context.Context) -> bool

      Function that the sensors defined while deriving this class should
      override.



