docs/apache-airflow-providers-sftp/2.6.0/_sources/_api/airflow/providers/sftp/sensors/sftp/index.rst.txt
:py:mod:`airflow.providers.sftp.sensors.sftp`
=============================================

.. py:module:: airflow.providers.sftp.sensors.sftp

.. autoapi-nested-parse::

   This module contains SFTP sensor.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.sftp.sensors.sftp.SFTPSensor




.. py:class:: SFTPSensor(*, path, newer_than = None, sftp_conn_id = 'sftp_default', **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`

   Waits for a file or directory to be present on SFTP.

   :param path: Remote file or directory path
   :param sftp_conn_id: The connection to run the sensor against
   :param newer_than: DateTime for which the file or file path should be newer than, comparison is inclusive

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['path', 'newer_than']

      

   .. py:method:: poke(self, context)

      Function that the sensors defined while deriving this class should
      override.



